# news-aggregator

./: .env  .gitignore  README.md  docker-compose.yml
backend/app/: pyproject.toml
backend/app/app/: main.py  test_api.py
backend/app/app/api/: api.py
backend/app/app/api/endpoints/: news.py
backend/app/app/core/: config.py
backend/app/app/schemas/: __init__.py  response.py
