[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["nosa"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.68.1"
sentry-sdk = "^1.4.1"
redis = "^4.3.0"
httpx = "^0.22.0"
pytest = "^7.1.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
